--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ray Lau</h1>
-    <img src="/assets/Profile.jpg" alt="Ray's profile photo" height="200">
+    <img src="assets/Profile.jpg" alt="Ray's profile photo" height="200">
     <hr>
 
     <h2>Profile</h2>
